Some changes pt3
